# Robo67

./: .gitignore  CLAUDE.md  CONTEXT.md  HANDOFF.md  PRESENTATION.md  README.md  prompt.txt  run_live.sh  start_calibration  start_demo.sh
robo67_insertion/: PHASE0_VERIFIED.md  package.xml  pytest.ini  setup.cfg  setup.py
robo67_insertion/captures/proto/: detect_holes.py  detect_panel.py
robo67_insertion/config/: box_template.jpg.bak  c920_homography.npz  port_offset.npz  port_offset.npz.bak  robo67.yaml
robo67_insertion/launch/: hardware.launch.py  logging.launch.py  sim.launch.py
robo67_insertion/robo67_insertion/: config_schema.py  ros_qos.py
robo67_insertion/robo67_insertion/lib/: box_detect.py  (+18 more)
robo67_insertion/scripts/: activate_cartesian.sh  container_setup.sh  hw_cable_insert_fixed.py  hw_cable_insertion_vision.py  hw_calibrate_c920.py  hw_calibrate_socket_proxy.py  hw_cartesian_hold.py  hw_cmd_iface.py  hw_grab_box_template.py  hw_handguide.py  hw_move_to.py  hw_peg_in_hole_vision.py  hw_probe_contact.py  hw_recover.py  hw_teach_port_offset.py  hw_view_socket_detection.py  sim_bringup.sh
robo67_insertion/test/: test_box_detect.py  test_calibration.py  test_command_path_adapters.py  test_config.py  test_contact_lifecycle.py  test_force_regulator.py  test_geometry.py  test_hole_detect.py  test_image_overlay.py  test_insertion_event.py  test_insertion_fsm.py  test_insertion_intent.py  test_pixel_mapping.py  test_port_offset.py  test_safety.py  test_safety_envelope.py  test_servoing.py  test_smoke.py  test_spiral.py  test_telemetry.py  test_wrench.py
(+98 files in other folders)
